--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ html {
 #slider{
    margin-top: 46px;
    padding-top: 50%;
-   background: url('/assets/img/slider/r1.jpeg') top center / cover no-repeat;
+   background: url('../img/slider/rrr.jpg') top center / cover no-repeat;
     
 
 }
